--- a/SeazonProject/src/main/resources/templates/layout.html
+++ b/SeazonProject/src/main/resources/templates/layout.html
@@ -90,7 +90,7 @@
 <!-- 주소 API -->
 <script src="//t1.daumcdn.net/mapjsapi/bundle/postcode/prod/postcode.v2.js"></script>
 
-<!-- 🔥 travel_form.html 등 각 화면 CSS 삽입용 -->
+<!-- travel_form.html 등 각 화면 CSS 삽입용 -->
 <th:block layout:fragment="css"></th:block>
 
 <title>사계로</title>
@@ -104,7 +104,7 @@
     <!-- 페이지 내용 삽입 -->
     <th:block layout:fragment="content"></th:block>
 
-    <!-- 🔥 각 화면 JavaScript 삽입용 -->
+    <!-- 각 화면 JavaScript 삽입용 -->
     <th:block layout:fragment="script"></th:block>
 
 </body>
