--- a/SeazonProject/src/main/resources/templates/travel_form.html
+++ b/SeazonProject/src/main/resources/templates/travel_form.html
@@ -2,7 +2,7 @@
 <html layout:decorate="~{layout}">
 
 <!-- ============================= -->
-<!-- ✔ CSS 영역 (layout에 삽입됨) -->
+<!-- CSS 영역 (layout에 삽입됨) -->
 <!-- ============================= -->
 <th:block layout:fragment="css">
 
@@ -38,7 +38,7 @@
 
 
 <!-- ============================= -->
-<!-- ✔ 실제 화면 내용 -->
+<!-- 실제 화면 내용 -->
 <!-- ============================= -->
 <th:block layout:fragment="content">
 
@@ -175,7 +175,7 @@
 
 
 <!-- ============================= -->
-<!-- ✔ JS 영역 (layout에 삽입됨) -->
+<!-- JS 영역 (layout에 삽입됨) -->
 <!-- ============================= -->
 <th:block layout:fragment="script">
 
